April 3, 2000 - Jim Whitehead
-----------------------------
 - tnt-show-timestamps has been renamed to tnt-use-timestamps to go with our
   naming conventions

April 1, 2000 - Jim Whitehead
-----------------------------
 - Small change in tnt-get-away-msg to fix a possible error with trying
   to send a nil away message.  

April 1, 2000 - Neil "Fred" Picciotto
-------------------------------------
 - removed tnt-default-username-list variable, replaced it with
   a new tnt-username-alist variable, which assocs usernames with
   passwords.
 - explained the above in INSTALL.
 - tnt-pounce-delete was using "remassoc" which didn't compile for me;
   perhaps this was another XEmacs-ism?  in any case, wrote
   tnt-remassoc to remove an assoc from an alist.
 - removed some tab characters that were still lying around in tnt.el.

March 31, 2000 - Jim Whitehead
------------------------------
 - Bugfix to fix the "no process" mesasges, due to incorrect calls
   in tnt-buddy-shutdown
 - Removed executable permissions on CVS for PROTOCOL and README
 - Broke alot of fixed code in order to keep the project compatable
   with GNU emacs.  (replace-in-string) is not standard, and therefore
   breaks all over the place with GNU.  This affects: 
   - tnt-strip-a-href and tnt-strip-html in tnt.el and
   - toc-encode and toc-normalize
   These have been reverted to their orginal versions.
 - There was a problem with the changes to tnt-away, etc where (away) is not
   being appended to the buddy list for any away buddies.  This has been fixed.
   the problem was due to away being ignored in tnt-set-buddy-status

March 31, 2000 - John Jannotti
------------------------------
 - Simplified pounce deletion to just one function, picked
   tnt-pounce-delete as the "survivor". (Note this is user visable,
   but barely)
 - Simplified a lot of code by adding tnt-addassoc and using it.
 - renamed tnt-pounce-list to tnt-pounce-alist for consistency